--- a/src/app/components/admin/users/users.component.css
+++ b/src/app/components/admin/users/users.component.css
@@ -1,5 +1,11 @@
 .invalid {
   border-color: red !important;
+  color: red !important;
+}
+
+.dark .invalid {
+  border-color: #ff4d4d !important;
+  color: #ff4d4d !important;
 }
 
 .highlighted {
