--- a/src/app/layouts/admin/admin.html
+++ b/src/app/layouts/admin/admin.html
@@ -1,9 +1,9 @@
-<section class="bg-teal-300">
+<section class="bg-emerald-500">
   <app-sidebar></app-sidebar>
 
   <div class="p-2 ml-12">
     <div
-      class="p-2 border-2 border-teal-700 border-dashed rounded-lg min-h-[98vh] bg-neutral-primary"
+      class="p-2 border-2 border-b-emerald-700 border-dashed rounded-lg min-h-[98vh] bg-neutral-primary"
     >
       <router-outlet />
     </div>
